@@ -2,7 +2,8 @@
 * bugfixes
 ====================== 0.9.24.2 ====================
  * Restore joystick/controller functionality
- * Fix crash when starting Hedgewars with 2 controllers connected
+ * Fix crash when starting game with 2 controllers or mor connected
+ + Add default controls for controllers (see README)
 
 ====================== 0.9.24.1 ====================
  * Fix crash when portable portal device is fired at reduced graphics quality
